[gd_scene load_steps=14 format=3 uid="uid://br8ugoivcgshj"]

[ext_resource type="VideoStream" uid="uid://b516dep8oca2r" path="res://src/assets/ui/mainmenu_back.ogv" id="1_5dsdd"]
[ext_resource type="Script" uid="uid://c4edoenb2k3e1" path="res://src/scripts/mainmenu.gd" id="1_vmwyx"]
[ext_resource type="FontFile" uid="uid://d4emxlewlrqaf" path="res://font/Karma Future.otf" id="2_asv1t"]
[ext_resource type="LabelSettings" uid="uid://i6f1lmycuxws" path="res://src/assets/ui/header.tres" id="2_p8thm"]
[ext_resource type="Texture2D" uid="uid://cvvjol7rjlqvx" path="res://src/assets/ui/basic/MainMenu.png" id="3_54dtw"]
[ext_resource type="Texture2D" uid="uid://bd2wcfpk55v83" path="res://src/assets/ui/basic/Game Logo.png" id="7_6r18w"]
[ext_resource type="Theme" uid="uid://ys24hk4rb1xo" path="res://src/assets/ui/theme.tres" id="8_6wcb6"]
[ext_resource type="PackedScene" uid="uid://cbvgm61qw2giq" path="res://src/scenes/UI/levelselector.tscn" id="8_ubq7q"]
[ext_resource type="PackedScene" uid="uid://xsckw4ti5dgv" path="res://src/scenes/UI/settings_menu.tscn" id="10_5dsdd"]
[ext_resource type="AudioStream" uid="uid://b8w7o1biiuvv2" path="res://src/assets/sounds/chillin_at_the_cave.mp3" id="18_ofngt"]

[sub_resource type="Animation" id="Animation_y0iw5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i48r3"]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.1, 4.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7p88j"]
_data = {
&"RESET": SubResource("Animation_y0iw5"),
&"fade_in": SubResource("Animation_i48r3")
}

[node name="main_menu" type="Control"]
custom_minimum_size = Vector2(1080, 500)
layout_mode = 3
anchor_right = 1.0015625
anchor_bottom = 1.0069444
metadata/_edit_use_anchors_ = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1249.4326
offset_bottom = 700.7461
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)
stream = ExtResource("1_5dsdd")
autoplay = true
loop = true

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.031201247
anchor_top = 0.04137931
anchor_right = 0.57187206
anchor_bottom = 0.22605518
theme_override_font_sizes/font_size = 100
text = "   Dwarf Escape"
label_settings = ExtResource("2_p8thm")
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.027
anchor_right = 0.314
anchor_bottom = 0.44200003
offset_left = 49.771996
offset_top = -103.0
offset_right = 1823.688
offset_bottom = 1576.1
scale = Vector2(0.28, 0.28)
texture = ExtResource("7_6r18w")

[node name="MainMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmwyx")

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.383
anchor_right = 0.289
anchor_bottom = 0.899
offset_left = -33.45201
offset_top = 0.35998535
offset_right = 18.003967
offset_bottom = 35.450073
texture = ExtResource("3_54dtw")
expand_mode = 1
stretch_mode = 4

[node name="Play" type="Button" parent="MainMenu/TextureRect"]
layout_mode = 1
anchors_preset = -1
offset_left = 70.0
offset_top = 118.29004
offset_right = 466.0
offset_bottom = 235.29004
theme = ExtResource("8_6wcb6")
text = "PLAY"

[node name="Settings" type="Button" parent="MainMenu/TextureRect"]
z_as_relative = false
layout_mode = 0
offset_left = 67.0
offset_top = 271.29004
offset_right = 468.0
offset_bottom = 389.29004
theme = ExtResource("8_6wcb6")
text = "SETTINGS"

[node name="Quit" type="Button" parent="MainMenu/TextureRect"]
layout_mode = 0
offset_left = 67.0
offset_top = 425.29004
offset_right = 469.0
offset_bottom = 544.29004
theme = ExtResource("8_6wcb6")
text = "QUIT"

[node name="levelselector" parent="." instance=ExtResource("8_ubq7q")]
visible = false
layout_mode = 1
offset_top = 2.0
offset_bottom = 2.0

[node name="SettingsMenu" parent="." instance=ExtResource("10_5dsdd")]
visible = false
layout_mode = 1

[node name="start" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_7p88j")
}

[node name="ColorRect" type="ColorRect" parent="start"]
visible = false
modulate = Color(1, 1, 1, 0.9030624)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="start/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -3.0
offset_right = 9.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_asv1t")
theme_override_font_sizes/font_size = 120
text = "Team MÃµmmid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ofngt")

[connection signal="pressed" from="MainMenu/TextureRect/Play" to="MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/TextureRect/Settings" to="MainMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/TextureRect/Quit" to="MainMenu" method="_on_quit_pressed"]
